--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
     <section id="projects">
       <div class="projects_grid">
         <div class="project">
-          <div class="cover p1"></div>
+          <div class="cover p1"><img src="/img/p1-2.jpg" alt="mockup picture with multiple screen devices" /></div>
           <a href="/project1.html">13C.01.01 Working with Fonts and UI Components</a>
           <p>description</p>
         </div>
         <div class="project">
-          <div class="cover p2"></div>
+          <div class="cover p2"><img src="/img/p2-1.jpg" alt="mockup picture with multiple screen devices" /></div>
           <a href="/project1.html">13C.01.01 Working with Fonts and UI Components</a>
           <p>description</p>
         </div>
         <div class="project">
-          <div class="cover p3"></div>
+          <div class="cover p3"><img src="/img/p3-1.png" alt="mockup picture with multiple screen devices" /></div>
           <a href="/project1.html">13C.01.01 Working with Fonts and UI Components</a>
           <p>description</p>
         </div>
