--- a/project1.html
+++ b/project1.html
@@ -16,23 +16,36 @@
         <li><a href="#about">About</a></li>
       </ul>
     </nav>
-    <header>
-      <h1>Project 123</h1>
+    <header class="project_header">
+      <p>13C.01.01</p>
+      <h1>Working with Fonts and UI Components</h1>
       <h2>Project overview</h2>
-      <p>In this project we were taught about basic principles in typography.</p>
+      <p>
+        The main focus of this project was learning more about fonts and typography. The exercises helped us understand which font families are more suitable for digital platforms, what are the good font pairings and what is an appropriate text
+        sizing and hierarchy of different text sizes. We were shown best practice in adjusting line height and padding. All of the abovementioned together with a good contrast should improve the overall look but most importantly, the readability of
+        the website.
+      </p>
     </header>
-    <section id="p1_cover"></section>
-    <div class="project_text"><p>In this project we were taught about basic principles in typography.</p></div>
-    <section class="p1_image"></section>
-    <div class="project_text"><p>In this project we were taught about basic principles in typography.</p></div>
-    <section class="p1_image"></section>
-    <section id="p_conclusion">
-      <h2>What did I learn</h2>
-      <div class="conclusion_text">
-        <p>Thanks to the exercises above I got a better understanding of how to structure and style my websites in a faster and a more elegant way. It also helped me in making my designs look more professional and up to date with current trends.</p>
-      </div>
-    </section>
-
+    <section id="p1_cover"><img src="/img/p1-2-cover.jpg" alt="mockup picture with multiple screen devices" /></section>
+    <div class="project_text">
+      <p>
+        I chose the sans-serif font Raleway as my base paragraph font. Combined with a serif font Playfair Display, it creates an elegant yet easy-to read combination. The base paragraph text size was set to 16px. The h1-h3 headlines were adjusted
+        accordingly with rem values following proportional text scale conventions. For example, the size of h1 was 5.653rem - following the rule of Augmented fourth.
+      </p>
+    </div>
+    <section class="p1_image"><img src="/img/p1-example-1.png" alt="screenshot of a headline" /></section>
+    <div class="project_text">
+      <p>Another challenge was designing the UI components such as buttons and cards. I chose a subtle light design to make the images stand out and be the main focal point. The second important element were the buttons.</p>
+    </div>
+    <section class="p1_image"><img src="/img/p1-cards.png" alt="screenshot of a headline" /></section>
+    <div class="project_text">
+      <p>
+        In this exercise we were also encouraged to apply a colour palette, so I experimented with split-complementary colours: orange, purple and green. The main 2 colors were a very light grey with a purple hue and a muted purple. I chose 2 accent
+        colors - green and orange that I used mainly for buttons and links.
+      </p>
+    </div>
+    <section class="p1_image"><img src="/img/p1-example-2.png" alt="screenshot of a headline" /></section>
+    <div class="website_link"><a href="https://nataliapetrova07.github.io/13c.01.01.fonts-and-components/" target="_blank" rel="noopener noreferrer">Click here to see the solution</a></div>
     <footer>Natália Petrová 2022</footer>
   </body>
 </html>
