project images and basic setup

--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
       <div class="projects_grid">
         <div class="project">
           <div class="cover p1"><img src="/img/p1-2.jpg" alt="mockup picture with multiple screen devices" /></div>
-          <a href="/project1.html">13C.01.01 Working with Fonts and UI Components</a>
-          <p>description</p>
+          <a href="/project1.html">Working with Fonts and UI Components</a>
+          <p>13C.01.01</p>
         </div>
         <div class="project">
           <div class="cover p2"><img src="/img/p2-1.jpg" alt="mockup picture with multiple screen devices" /></div>
-          <a href="/project1.html">13C.01.01 Working with Fonts and UI Components</a>
-          <p>description</p>
+          <a href="/project2.html">Working with Colors and Animation</a>
+          <p>13C.01.02</p>
         </div>
         <div class="project">
           <div class="cover p3"><img src="/img/p3-1.png" alt="mockup picture with multiple screen devices" /></div>
-          <a href="/project1.html">13C.01.01 Working with Fonts and UI Components</a>
-          <p>description</p>
+          <a href="/project3.html">Responsive Design</a>
+          <p>13C.02.01</p>
         </div>
       </div>
     </section>
