--- a/project1.html
+++ b/project1.html
@@ -45,7 +45,7 @@
       </p>
     </div>
     <section class="p1_image"><img src="/img/p1-example-2.png" alt="screenshot of a headline" /></section>
-    <div class="website_link"><a href="https://nataliapetrova07.github.io/13c.01.01.fonts-and-components/" target="_blank" rel="noopener noreferrer">Click here to see the solution</a></div>
+    <div class="website_link"><a href="https://nataliapetrova07.github.io/13c.01.01.fonts-and-components/" target="_blank" rel="noopener noreferrer">Click here to see the website &#x2794;</a></div>
     <footer>Natália Petrová 2022</footer>
   </body>
 </html>
