finished adding text and images

--- a/project2.html
+++ b/project2.html
@@ -13,32 +13,40 @@
       <a class="logo" href="index.html">NP</a>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#about">About</a></li>
       </ul>
     </nav>
     <header class="project_header">
       <p>13C.01.02</p>
-      <h1>Working with Colors and Animation</h1>
+      <h1>Working with Colors and Animations</h1>
       <h2>Project overview</h2>
       <p>
-        The main focus of this project was learning more about fonts and typography. The exercises helped us understand which font families are more suitable for digital platforms, what are the good font pairings and what is an appropriate text
-        sizing and hierarchy of different text sizes. We were shown best practice in adjusting line height and padding. All of the abovementioned together with a good contrast should improve the overall look but most importantly, the readability of
-        the website.
+        The main focus of this project was to explore various approaches in animation and also to observe and use the basic animation conventions and principles. We learned how to translate css animation properties and keyframes into Javascript in
+        order to gain more control over the animation. At last, we were shown a Motion One library - a tool that facilitates the build of some basic web interactions.
       </p>
     </header>
     <section id="p1_cover"><img src="/img/p2-1.jpg" alt="mockup picture with multiple screen devices" /></section>
     <div class="project_text">
       <p>
-        I chose the sans-serif font Raleway as my base paragraph font. Combined with a serif font Playfair Display, it creates an elegant yet easy-to read combination. The base paragraph text size was set to 16px. The h1-h3 headlines were adjusted
-        accordingly with rem values following proportional text scale conventions. For example, the size of h1 was 5.653rem - following the rule of Augmented fourth.
+        In this exercise I improved my knowledge of colour theory by creating a dark mode. This was achieved by creating a media query in css with a preferred colour scheme of dark. I used the same colours except for one shade darker colour of blue
+        to create more depth and one shade lighter colour of green for the text to improve contrast and legibility.
       </p>
     </div>
     <section class="p1_image"><img src="/img/p2-dark-mode.png" alt="screenshot of a headline" /></section>
     <div class="project_text">
-      <p>Another challenge was designing the UI components such as buttons and cards. I chose a subtle light design to make the images stand out and be the main focal point. The second important element were the buttons.</p>
+      <p>
+        The microinteractions on this website are very subtle - transitions and animations on buttons and links, opacity change on page load, stopping the graphics animation in Javascript on hover and two Motion One on-scroll animations for the text
+        transition and graphics rotation.
+      </p>
     </div>
-    <section class="p1_image"><img src="/img/p1-cards.png" alt="screenshot of a headline" /></section>
-    <div class="website_link"><a href="https://nataliapetrova07.github.io/13c.01.01.fonts-and-components/" target="_blank" rel="noopener noreferrer">Click here to see the website &#x2794;</a></div>
+    <section class="videos">
+      <article class="p2_video">
+        <video autoplay muted loop><source src="/video/Sequence 01.mp4" type=video/mp4></video>
+      </article>
+      <article class="p2_video">
+        <video autoplay muted loop><source src="/video/Sequence 02.mp4" type=video/mp4></video>
+      </article>
+    </section>
+    <div class="website_link"><a href="https://nataliapetrova07.github.io/13c.01.02.colors-and-animations/" target="_blank" rel="noopener noreferrer">Click here to see the website &#x2794;</a></div>
     <footer>Natália Petrová 2022</footer>
   </body>
 </html>
