--- a/project3.html
+++ b/project3.html
@@ -13,7 +13,6 @@
       <a class="logo" href="index.html">NP</a>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#about">About</a></li>
       </ul>
     </nav>
     <header class="project_header">
@@ -21,31 +20,30 @@
       <h1>Responsive Design</h1>
       <h2>Project overview</h2>
       <p>
-        The main focus of this project was learning more about fonts and typography. The exercises helped us understand which font families are more suitable for digital platforms, what are the good font pairings and what is an appropriate text
-        sizing and hierarchy of different text sizes. We were shown best practice in adjusting line height and padding. All of the abovementioned together with a good contrast should improve the overall look but most importantly, the readability of
-        the website.
+        The main focus of this project was to gain more knowledge of flexbox and grid in order to improve the responsiveness of our website. We learned about relative units and where to use them and several other styling practices such asi min-width
+        that improve the fluidity of the layout.
       </p>
     </header>
     <section id="p1_cover"><img src="/img/p3-1.png" alt="mockup picture with multiple screen devices" /></section>
     <div class="project_text">
       <p>
-        I chose the sans-serif font Raleway as my base paragraph font. Combined with a serif font Playfair Display, it creates an elegant yet easy-to read combination. The base paragraph text size was set to 16px. The h1-h3 headlines were adjusted
-        accordingly with rem values following proportional text scale conventions. For example, the size of h1 was 5.653rem - following the rule of Augmented fourth.
+        I styled this website to be mobile-first and proceeded to make some adjustments for bigger screen widths in media queries. The responsiveness was usually achieved by changing the direction of flex, or using flex-wrap, or by changing the
+        number of grid columns for a different screen size.
       </p>
     </div>
     <section class="p1_image"><img src="/img/p3-comparison-1.png" alt="screenshot of a headline" /></section>
     <div class="project_text">
-      <p>Another challenge was designing the UI components such as buttons and cards. I chose a subtle light design to make the images stand out and be the main focal point. The second important element were the buttons.</p>
+      <p>I styled the images to be 100% width when on mobile, this rule changes to 100% height as soon as the image appears in a multiple column grid.</p>
     </div>
     <section class="p1_image"><img src="/img/p3-comparison-2.png" alt="screenshot of a headline" /></section>
     <div class="project_text">
       <p>
-        In this exercise we were also encouraged to apply a colour palette, so I experimented with split-complementary colours: orange, purple and green. The main 2 colors were a very light grey with a purple hue and a muted purple. I chose 2 accent
-        colors - green and orange that I used mainly for buttons and links.
+        Designing the contact form was a good opportunity to practise the control over the grid and e.g. choosing the text area to span over 2 columns. Some elements change their relation to the layout based on the screen width - for example the
+        width of the form is at some point set to a maximum value in order to not look inappropriate.
       </p>
     </div>
-    <section class="p1_image"><img src="/img/p1-example-2.png" alt="screenshot of a headline" /></section>
-    <div class="website_link"><a href="https://nataliapetrova07.github.io/13c.01.01.fonts-and-components/" target="_blank" rel="noopener noreferrer">Click here to see the website &#x2794;</a></div>
+    <section class="p1_image"><img src="/img/p3-comparison-3.png" alt="screenshot of a headline" /></section>
+    <div class="website_link"><a href="https://nataliapetrova07.github.io/13c.02.01.responsive-design/" target="_blank" rel="noopener noreferrer">Click here to see the website &#x2794;</a></div>
     <footer>Natália Petrová 2022</footer>
   </body>
 </html>
