added some interactions

--- a/project1.html
+++ b/project1.html
@@ -13,7 +13,6 @@
       <a class="logo" href="index.html">NP</a>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#about">About</a></li>
       </ul>
     </nav>
     <header class="project_header">
@@ -26,6 +25,12 @@
         the website.
       </p>
     </header>
+    <a href="/project2.html" class="next_project">
+      <p>next project</p>
+      <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#363440" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
+        <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
+      </svg>
+    </a>
     <section id="p1_cover"><img src="/img/p1-2-cover.jpg" alt="mockup picture with multiple screen devices" /></section>
     <div class="project_text">
       <p>
@@ -45,7 +50,11 @@
       </p>
     </div>
     <section class="p1_image"><img src="/img/p1-example-2.png" alt="screenshot of a headline" /></section>
-    <div class="website_link"><a href="https://nataliapetrova07.github.io/13c.01.01.fonts-and-components/" target="_blank" rel="noopener noreferrer">Click here to see the website &#x2794;</a></div>
-    <footer>Natália Petrová 2022</footer>
+    <div class="website_link"><a class="p_link" href="https://nataliapetrova07.github.io/13c.01.01.fonts-and-components/" target="_blank" rel="noopener noreferrer">Click here to see the website &#x2794;</a></div>
+    <footer>
+      <p>Natália Petrová 2022</p>
+    </footer>
+    <script src="script.js"></script>
+    <script type="module" src="motion.js"></script>
   </body>
 </html>
