--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <!-- Menu component layout -->
       <a class="logo" href="index.html">NP</a>
       <ul>
-        <li><a href="#home">Home</a></li>
+        <li><a class="home" href="#home">Home</a></li>
       </ul>
     </nav>
     <header>
@@ -32,17 +32,17 @@
     <section id="projects">
       <div class="projects_grid">
         <div class="project">
-          <div class="cover p1"><img src="/img/p1-2.jpg" alt="mockup picture with multiple screen devices" /></div>
+          <a href="/project1.html" class="cover p1"><img src="/img/p1-2.jpg" alt="mockup picture with multiple screen devices" /></a>
           <a href="/project1.html">Working with Fonts and UI Components</a>
           <p>13C.01.01</p>
         </div>
         <div class="project">
-          <div class="cover p2"><img src="/img/p2-1.jpg" alt="mockup picture with multiple screen devices" /></div>
+          <a href="/project2.html" class="cover p2"><img src="/img/p2-1.jpg" alt="mockup picture with multiple screen devices" /></a>
           <a href="/project2.html">Working with Colors and Animation</a>
           <p>13C.01.02</p>
         </div>
         <div class="project">
-          <div class="cover p3"><img src="/img/p3-1.png" alt="mockup picture with multiple screen devices" /></div>
+          <a href="/project3.html" class="cover p3"><img src="/img/p3-1.png" alt="mockup picture with multiple screen devices" /></a>
           <a href="/project3.html">Responsive Design</a>
           <p>13C.02.01</p>
         </div>
@@ -55,5 +55,7 @@
       </div>
     </section>
     <footer>Natália Petrová 2022</footer>
+    <script src="script.js"></script>
+    <script type="module" src="motion.js"></script>
   </body>
 </html>
