--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
     <section id="projects">
       <div class="projects_grid">
         <div class="project">
-          <a href="/project1.html" class="cover p1"><img src="/img/p1-2.jpg" alt="mockup picture with multiple screen devices" /></a>
-          <a href="/project1.html">Working with Fonts and UI Components</a>
+          <a href="project1.html" class="cover p1"><img src="img/p1-2.jpg" alt="mockup picture with multiple screen devices" /></a>
+          <a href="project1.html">Working with Fonts and UI Components</a>
           <p>13C.01.01</p>
         </div>
         <div class="project">
-          <a href="/project2.html" class="cover p2"><img src="/img/p2-1.jpg" alt="mockup picture with multiple screen devices" /></a>
-          <a href="/project2.html">Working with Colors and Animation</a>
+          <a href="project2.html" class="cover p2"><img src="img/p2-1.jpg" alt="mockup picture with multiple screen devices" /></a>
+          <a href="project2.html">Working with Colors and Animation</a>
           <p>13C.01.02</p>
         </div>
         <div class="project">
-          <a href="/project3.html" class="cover p3"><img src="/img/p3-1.png" alt="mockup picture with multiple screen devices" /></a>
-          <a href="/project3.html">Responsive Design</a>
+          <a href="project3.html" class="cover p3"><img src="img/p3-1.png" alt="mockup picture with multiple screen devices" /></a>
+          <a href="project3.html">Responsive Design</a>
           <p>13C.02.01</p>
         </div>
       </div>
