--- a/project3.html
+++ b/project3.html
@@ -24,31 +24,31 @@
         that improve the fluidity of the layout.
       </p>
     </header>
-    <a href="/project1.html" class="next_project">
+    <a href="project1.html" class="next_project">
       <p>next project</p>
       <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#363440" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
         <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
       </svg>
     </a>
-    <section id="p1_cover"><img src="/img/p3-1.png" alt="mockup picture with multiple screen devices" /></section>
+    <section id="p1_cover"><img src="img/p3-1.png" alt="mockup picture with multiple screen devices" /></section>
     <div class="project_text">
       <p>
         I styled this website to be mobile-first and proceeded to make some adjustments for bigger screen widths in media queries. The responsiveness was usually achieved by changing the direction of flex, or using flex-wrap, or by changing the
         number of grid columns for a different screen size.
       </p>
     </div>
-    <section class="p1_image"><img src="/img/p3-comparison-1.png" alt="screenshot of a headline" /></section>
+    <section class="p1_image"><img src="img/p3-comparison-1.png" alt="screenshot of a headline" /></section>
     <div class="project_text">
       <p>I styled the images to be 100% width when on mobile, this rule changes to 100% height as soon as the image appears in a multiple column grid.</p>
     </div>
-    <section class="p1_image"><img src="/img/p3-comparison-2.png" alt="screenshot of a headline" /></section>
+    <section class="p1_image"><img src="img/p3-comparison-2.png" alt="screenshot of a headline" /></section>
     <div class="project_text">
       <p>
         Designing the contact form was a good opportunity to practise the control over the grid and e.g. choosing the text area to span over 2 columns. Some elements change their relation to the layout based on the screen width - for example the
         width of the form is at some point set to a maximum value in order to not look inappropriate.
       </p>
     </div>
-    <section class="p1_image"><img src="/img/p3-comparison-3.png" alt="screenshot of a headline" /></section>
+    <section class="p1_image"><img src="img/p3-comparison-3.png" alt="screenshot of a headline" /></section>
     <div class="website_link"><a class="p_link" href="https://nataliapetrova07.github.io/13c.02.01.responsive-design/" target="_blank" rel="noopener noreferrer">Click here to see the website &#x2794;</a></div>
     <footer>Natália Petrová 2022</footer>
     <script src="script.js"></script>
