--- a/project1.html
+++ b/project1.html
@@ -25,31 +25,31 @@
         the website.
       </p>
     </header>
-    <a href="/project2.html" class="next_project">
+    <a href="project2.html" class="next_project">
       <p>next project</p>
       <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#363440" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
         <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
       </svg>
     </a>
-    <section id="p1_cover"><img src="/img/p1-2-cover.jpg" alt="mockup picture with multiple screen devices" /></section>
+    <section id="p1_cover"><img src="img/p1-2-cover.jpg" alt="mockup picture with multiple screen devices" /></section>
     <div class="project_text">
       <p>
         I chose the sans-serif font Raleway as my base paragraph font. Combined with a serif font Playfair Display, it creates an elegant yet easy-to read combination. The base paragraph text size was set to 16px. The h1-h3 headlines were adjusted
         accordingly with rem values following proportional text scale conventions. For example, the size of h1 was 5.653rem - following the rule of Augmented fourth.
       </p>
     </div>
-    <section class="p1_image"><img src="/img/p1-example-1.png" alt="screenshot of a headline" /></section>
+    <section class="p1_image"><img src="img/p1-example-1.png" alt="screenshot of a headline" /></section>
     <div class="project_text">
       <p>Another challenge was designing the UI components such as buttons and cards. I chose a subtle light design to make the images stand out and be the main focal point. The second important element were the buttons.</p>
     </div>
-    <section class="p1_image"><img src="/img/p1-cards.png" alt="screenshot of a headline" /></section>
+    <section class="p1_image"><img src="img/p1-cards.png" alt="screenshot of a headline" /></section>
     <div class="project_text">
       <p>
         In this exercise we were also encouraged to apply a colour palette, so I experimented with split-complementary colours: orange, purple and green. The main 2 colors were a very light grey with a purple hue and a muted purple. I chose 2 accent
         colors - green and orange that I used mainly for buttons and links.
       </p>
     </div>
-    <section class="p1_image"><img src="/img/p1-example-2.png" alt="screenshot of a headline" /></section>
+    <section class="p1_image"><img src="img/p1-example-2.png" alt="screenshot of a headline" /></section>
     <div class="website_link"><a class="p_link" href="https://nataliapetrova07.github.io/13c.01.01.fonts-and-components/" target="_blank" rel="noopener noreferrer">Click here to see the website &#x2794;</a></div>
     <footer>
       <p>Natália Petrová 2022</p>
