--- a/project2.html
+++ b/project2.html
@@ -24,20 +24,20 @@
         order to gain more control over the animation. At last, we were shown a Motion One library - a tool that facilitates the build of some basic web interactions.
       </p>
     </header>
-    <a href="/project3.html" class="next_project">
+    <a href="project3.html" class="next_project">
       <p>next project</p>
       <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#363440" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
         <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
       </svg>
     </a>
-    <section id="p1_cover"><img src="/img/p2-1.jpg" alt="mockup picture with multiple screen devices" /></section>
+    <section id="p1_cover"><img src="img/p2-1.jpg" alt="mockup picture with multiple screen devices" /></section>
     <div class="project_text">
       <p>
         In this exercise I improved my knowledge of colour theory by creating a dark mode. This was achieved by creating a media query in css with a preferred colour scheme of dark. I used the same colours except for one shade darker colour of blue
         to create more depth and one shade lighter colour of green for the text to improve contrast and legibility.
       </p>
     </div>
-    <section class="p1_image"><img src="/img/p2-dark-mode.png" alt="screenshot of a headline" /></section>
+    <section class="p1_image"><img src="img/p2-dark-mode.png" alt="screenshot of a headline" /></section>
     <div class="project_text">
       <p>
         The microinteractions on this website are very subtle - transitions and animations on buttons and links, opacity change on page load, stopping the graphics animation in Javascript on hover and two Motion One on-scroll animations for the text
@@ -46,10 +46,10 @@
     </div>
     <section class="videos">
       <article class="p2_video">
-        <video autoplay muted loop><source src="/video/Sequence 01.mp4" type=video/mp4></video>
+        <video autoplay muted loop><source src="video/Sequence 01.mp4" type=video/mp4></video>
       </article>
       <article class="p2_video">
-        <video autoplay muted loop><source src="/video/Sequence 02.mp4" type=video/mp4></video>
+        <video autoplay muted loop><source src="video/Sequence 02.mp4" type=video/mp4></video>
       </article>
     </section>
     <div class="website_link"><a class="p_link" href="https://nataliapetrova07.github.io/13c.01.02.colors-and-animations/" target="_blank" rel="noopener noreferrer">Click here to see the website &#x2794;</a></div>
