--- a/project3.html
+++ b/project3.html
@@ -12,7 +12,7 @@
       <!-- Menu component layout -->
       <a class="logo" href="index.html">NP</a>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a class="p_link" href="index.html">Home</a></li>
       </ul>
     </nav>
     <header class="project_header">
